--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.6.2",
+    "query-string": "^6.4.0",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
