--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.6.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-middleware": "^0.1.21",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "style-loader": "0.23.0",
